k8s/deployments/dashboard/ingress-minikube.yml
# http://dashboard.192.168.99.100.nip.io
# https://dashboard.192.168.99.100.nip.io

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  tls:
    - hosts:
        - dashboard.192.168.99.100.nip.io
      secretName: dashboard-tls-secret
  rules:
    - host: dashboard.192.168.99.100.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
