k8s/deployments/dashboard/istio-gateway.yml
#---

#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: dashboard-gateway
#  namespace: kube-system
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#      hosts:
#        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: kube-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-kubernetes-dashboard
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
        #serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        #privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "dashboard.192.168.33.16.nip.io"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  hosts:
    - "dashboard.192.168.33.16.nip.io"
  gateways:
    - dashboard-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kubernetes-dashboard
            port:
              number: 443
